lint: javadocs, imports, diamond operators (#2)